tests/api/reference/negative/10-contains-mixed-types.asm
const invalid: bool = contains("abc", b"b")
